Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjBoolObj.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        Boolean var
        var:SetValue(true)
        return var
    end
end